--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DEBUG=True
-DATABASE_URL=your_local_db_url_or_render_db_url
+# DATABASE_URL=your_local_db_url_or_render_db_url
+DATABASE_URL=sqlite:///db.sqlite3
